--- a/style.css
+++ b/style.css
@@ -10,4 +10,166 @@ License URI:  http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain:  wp-bootstrap-child
 */
 
-/* Write here your own personal stylesheet */
+#content{
+    padding-top: 3rem;
+}
+
+
+
+/* Button Styles */
+
+.btn-primary{
+    padding:11px 27px 12px;
+    background-color:#12615e !important;
+    border-color: #12615e !important;
+    text-transform: uppercase;
+}
+
+.btn-primary:hover{
+    background-color:#201c37 !important;
+    border-color: #201c37 !important;
+}
+
+.button-animation{
+    /* Animation Start */
+    transform: translateY(2rem);
+    opacity: 0;
+    transition: all 0.2s ease-in-out;
+}
+
+/* Slider modifications */
+
+/* Animations onHover */
+
+#wp-bp-posts-slider:hover .carousel-caption h5{
+    transform: translateY(0);
+    opacity: 1;
+}
+
+#wp-bp-posts-slider:hover .carousel-caption p{
+    opacity: 1;
+}
+
+#wp-bp-posts-slider:hover .button-animation{
+    transform: translateY(0);
+    opacity: 1;
+}
+
+#wp-bp-posts-slider:hover .carousel-item img{
+    transform: scale(1.1);
+}
+
+.carousel-control-prev-icon, .carousel-control-next-icon, .carousel-indicators{
+    display:none;
+}
+
+.carousel-caption h5{
+    font-size: 28px;
+
+    /* Animation Start */
+    transition: all 0.3s ease-in-out;
+    transform: translateY(7rem);
+
+    opacity:.95;
+}
+
+@media(min-width:800px){
+    .carousel-caption h5{
+        transform: translateY(3rem);
+        font-size: 36px;
+    }
+}
+
+.carousel-caption p, .carousel-caption h5{
+    width:65%;
+}
+
+.carousel-caption p{
+    font-size: 18px;
+
+    /* Animation start */
+    opacity: 0;
+    transition: all 0.3s ease-in-out;
+}
+
+.no-padding{
+    padding:0;
+}
+
+#wp-bp-posts-slider {
+    border:none;
+}
+
+#wp-bp-posts-slider .carousel-caption{
+    padding: 1rem 1rem;
+}
+
+.carousel-item img{
+    transition: all 0.3s ease-in-out;
+}
+
+/* Float Boxes -- right of slider */
+
+/* Animation Hover */
+
+.review-boxes__single:hover{
+    transform: translateY(0);
+    box-shadow: 1px 5px 41px rgba(233,233,233,.95);
+}
+
+.review-boxes{ /* Container */
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    align-self: center;
+}
+
+.review-boxes__single{
+    background-color: #fff;
+    padding: 1.5rem;
+    margin-bottom: 1rem;
+    position: relative;
+    overflow: hidden;
+
+    /* Animation */
+    transition: all 0.3s ease-in-out;
+    transform: translateY(.2rem);
+    box-shadow: 1px 5px 21px rgba(233,233,233,.95);
+}
+
+.review-boxes__assets{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.review-boxes img{
+    height: 7.5rem;
+    width: 7.5rem;
+    border-radius: 5%;
+}
+
+
+.review-boxes__title{
+    font-size: 1.1rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-bottom: .4rem;
+    margin-right: 1rem;
+}
+
+.review-boxes__excerpt{
+    font-size: .8rem;
+}
+
+.review-boxes__content{
+    padding-right:1rem;
+}
