--- a/style.css
+++ b/style.css
@@ -443,10 +443,24 @@ h2.main-title{
     padding: 1rem 0;
 }
 
-.blog-post__title{
+.blog-post__title, .blog-post__title--single{
+    color:#000;
+}
 
+.blog-post__title--single{
+    font-size: 2.2rem;
+    text-transform: uppercase;
 }
 
 .blog-post__excerpt{
 
+}
+
+/* COMMENTS */
+.comments-area.card{
+    border:none;
+}
+
+.comments-area .wb-comment-form{
+    padding:0;
 }
